# satysfi-stylo

./: Makefile  README.md  Satyristes  satysfi-stylo.opam
docs/: local.satyh  stylo.saty  stylo.satysfi-aux
src/: footage.satyh  label.satyh  path.satyh  stylo.satyh  utils.satyh
